<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="204dp"
        android:layout_height="72dp"
        android:layout_marginBottom="240dp"
        android:hint="@string/TextView"
        android:text="sonuç"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginBottom="31dp"
        android:hint="@string/button"
        android:text="Hesapla"
        android:textAlignment="center"
        android:textColor="@color/mavi"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextNumber1"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/editTextNumber1"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/mavi"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/editTextNumber2"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/mavi"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber1" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/editTextNumber3"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/mavi"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber4"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumber2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/editTextNumber4"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/mavi"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumber3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber3"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />
</androidx.constraintlayout.widget.ConstraintLayout>